2015-03-10  Carlos O'Donell  <carlos@redhat.com>

	* sysdeps/hppa/fpu/libm-test-ulps: Update.

2015-03-10  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18104]
	* math/auto-libm-test-in: Add another test of pow.
	* math/auto-libm-test-out: Regenerated.

2015-03-10  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/dbl-64/Makefile (CFLAGS-e_pow.c): Add
	$(config-cflags-nofma).

2015-03-10  Joseph Myers  <joseph@codesourcery.com>

	* soft-fp/double.h [SOFT_FP_DOUBLE_H]: New multiple-include guard.
	* soft-fp/extended.h [SOFT_FP_EXTENDED_H]: Likewise.
	* soft-fp/op-1.h [SOFT_FP_OP_1_H]: Likewise.
	* soft-fp/op-2.h [SOFT_FP_OP_2_H]: Likewise.
	* soft-fp/op-4.h [SOFT_FP_OP_4_H]: Likewise.
	* soft-fp/op-8.h [SOFT_FP_OP_8_H]: Likewise.
	* soft-fp/op-common.h [SOFT_FP_OP_COMMON_H]: Likewise.
	* soft-fp/quad.h [SOFT_FP_QUAD_H]: Likewise.
	* soft-fp/single.h [SOFT_FP_SINGLE_H]: Likewise.
	* soft-fp/soft-fp.h (SOFT_FP_H): Define to 1 rather than empty.
	Add comment on closing #endif.

2015-03-09  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* posix/wordexp.c (CHAR_IN_SET): New macro.
	(parse_param): Use it.

2015-03-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/libm-test-ulps: update.

2015-03-09  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #18043]
	* posix/wordexp.c (parse_param): Fix buffer overflow.
	* posix/wordexp-test.c (test_case): Add test case.

2015-03-09  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #18042]
	* posix/wordexp.c (parse_backtick): Fix off-by-one.
	* posix/wordexp-test.c (test_case): Add test for BZ #18042.

2015-03-09  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #18043]
	* posix/wordexp-test.c (test_case): Add test for BZ #18043
	(do_bz18043): Delete.
	(at_page_end): New.
	(testit): Refactor to have words at the edge of unreadable page.

2015-03-08  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #16734]
	* libio/genops.c (_IO_unbuffer_all): Renamed from _IO_unbuffer_write.